CPP_CORE/include/creative_core_api.h

typedef void* CreativeTileStoreHandle;
typedef void* CreativeTextureAtlasHandle;
// Native RGBA texture-atlas packing/storage.  The UI adapter only supplies
// image bytes and receives packed rectangles; shelf allocation and backing
// pixels remain owned by CreativeCore.
CreativeTextureAtlasHandle cs_texture_atlas_create(int size, int padding);
void cs_texture_atlas_destroy(CreativeTextureAtlasHandle handle);
int cs_texture_atlas_add(CreativeTextureAtlasHandle handle, int width, int height,
                         int* x, int* y);
int cs_texture_atlas_write(CreativeTextureAtlasHandle handle, int x, int y,
                           const uint8_t* pixels, int width, int height,
                           int stride);
int cs_texture_atlas_copy(CreativeTextureAtlasHandle handle, int x, int y,
                          uint8_t* output, int width, int height, int stride);
typedef struct CsTileWrite {
    int tile_x;
    int tile_y;
    const uint8_t* pixels;
    int width;
    int height;
    int stride;
    int image_format;
} CsTileWrite;
// Sparse resident tile map; Python owns only Qt adapters and scratch files.
CreativeTileStoreHandle cs_tile_store_create(int width, int height, int tile_size);
void cs_tile_store_destroy(CreativeTileStoreHandle handle);
int cs_tile_store_set(CreativeTileStoreHandle handle, int tile_x, int tile_y,
                      const uint8_t* pixels, int width, int height, int stride,
                      int image_format);
int cs_tile_store_set_many(CreativeTileStoreHandle handle,
                           const CsTileWrite* writes, int count);
int cs_tile_store_write_image(CreativeTileStoreHandle handle, const uint8_t* pixels,
                              int width, int height, int stride, int image_format,
                              int x, int y, int dirty_width, int dirty_height,
                              int* changed_xy_pairs, int pair_capacity);
int cs_tile_store_copy(CreativeTileStoreHandle handle, int tile_x, int tile_y,
                       uint8_t* output, int width, int height, int stride,
                       int image_format);
int cs_tile_store_copy_store(CreativeTileStoreHandle destination,
                             CreativeTileStoreHandle source);
int cs_tile_store_materialize(CreativeTileStoreHandle handle, uint8_t* output,
                              int width, int height, int stride, int image_format);
int cs_tile_store_info(CreativeTileStoreHandle handle, int tile_x, int tile_y,
                       int* resident, uint64_t* revision, uint64_t* last_access);
int cs_tile_store_copy_keys(CreativeTileStoreHandle handle, int* xy_pairs,
                            int pair_capacity);
int cs_tile_store_remove(CreativeTileStoreHandle handle, int tile_x, int tile_y);
int64_t cs_tile_store_write_png(CreativeTileStoreHandle handle, int tile_x,
                                int tile_y, const char* path);
int cs_tile_store_load_png(CreativeTileStoreHandle handle, int tile_x, int tile_y,
                           const char* path, uint64_t expected_revision);
int64_t cs_image_write_png(const char* path, const uint8_t* pixels, int width,
                           int height, int stride, int image_format);
int cs_image_fill(uint8_t* pixels, int width, int height, int stride,
                  int image_format, int red, int green, int blue, int alpha);
int cs_image_fill_rect(uint8_t* pixels, int width, int height, int stride,
                       int image_format, int x, int y, int rect_width,
                       int rect_height, int red, int green, int blue, int alpha);
int cs_render_brush_preset_art(
    uint8_t* texture, int texture_width, int texture_height, int texture_stride,
    int texture_format, uint8_t* preview, int preview_width, int preview_height,
    int preview_stride, int preview_format, float hardness, float size,
    int red, int green, int blue, int alpha);
int cs_apply_alpha_mask(uint8_t* image, int image_width, int image_height,
                        int image_stride, int image_format,
                        const uint8_t* mask, int mask_width, int mask_height,
                        int mask_stride, int mask_format);
void cs_tile_store_clear(CreativeTileStoreHandle handle);
void cs_tile_store_resize(CreativeTileStoreHandle handle, int width, int height);
int64_t cs_tile_store_allocated_bytes(CreativeTileStoreHandle handle);
// Selection-mask primitives. operation: 0 replace, 1 add, 2 subtract, 3 intersect.
int cs_selection_combine(uint8_t* destination, const uint8_t* candidate,
                         int width, int height, int destination_stride,
                         int candidate_stride, int operation);
int cs_selection_invert(uint8_t* pixels, int width, int height, int stride);
int cs_selection_bounds(const uint8_t* pixels, int width, int height, int stride,
                        int* x, int* y, int* bounds_width, int* bounds_height);
int cs_selection_contains(const uint8_t* pixels, int width, int height, int stride,
                          int x, int y, int* selected);