CORE/native_bridge.py

"""Shared loader and ctypes declarations for the CreativeCore C ABI.

The bridge is the boundary between PySide6 presentation adapters and the
native document/drawing engine. Keep symbol declarations centralized here so
all Python-facing components use the same ABI contract.
"""
from __future__ import annotations

import ctypes
import math
import sys
from array import array
from pathlib import Path

_LIBRARY = None


def _candidate_paths() -> tuple[Path, ...]:
    root = Path(__file__).resolve().parents[1]
    if sys.platform == "win32":
        names = ("CreativeCoreBridge.dll",)
    elif sys.platform == "darwin":
        names = ("libCreativeCoreBridge.dylib", "libCreativeCoreBridge.so")
    else:
        names = ("libCreativeCoreBridge.so",)
    return tuple(root / build / name for build in ("build_cpp_native", "build_cpp")
                 for name in names)


def load_creative_core():
    """Return the process-wide CreativeCore bridge, or ``None`` if unbuilt."""
    global _LIBRARY
    if _LIBRARY is not None:
        return _LIBRARY
    for path in _candidate_paths():
        if not path.is_file():
            continue
        try:
            library = ctypes.CDLL(str(path))
            _configure_selection(library)
            _configure_tile_store(library)
            _configure_texture_atlas(library)
            _configure_lz4(library)
            _configure_transforms(library)
            _configure_gradients(library)
            _configure_canvas_api(library)
            _configure_document_codecs(library)
            _configure_layer_stack(library)
            _configure_layer_composite(library)
            _configure_document_state(library)
            _LIBRARY = library
            return _LIBRARY
        except (OSError, AttributeError):
            continue
    return None


def _configure_selection(library) -> None:
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    library.cs_selection_combine.argtypes = [byte_ptr, byte_ptr, ctypes.c_int,
        ctypes.c_int, ctypes.c_int, ctypes.c_int, ctypes.c_int]
    library.cs_selection_combine.restype = ctypes.c_int
    library.cs_selection_invert.argtypes = [byte_ptr, ctypes.c_int, ctypes.c_int, ctypes.c_int]
    library.cs_selection_invert.restype = ctypes.c_int
    library.cs_selection_bounds.argtypes = [byte_ptr, ctypes.c_int, ctypes.c_int,
        ctypes.c_int, *([ctypes.POINTER(ctypes.c_int)] * 4)]
    library.cs_selection_bounds.restype = ctypes.c_int
    library.cs_selection_contains.argtypes = [byte_ptr, ctypes.c_int, ctypes.c_int,
        ctypes.c_int, ctypes.c_int, ctypes.c_int, ctypes.POINTER(ctypes.c_int)]
    library.cs_selection_contains.restype = ctypes.c_int


def _configure_tile_store(library) -> None:
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    handle = ctypes.c_void_p
    library.cs_tile_store_create.argtypes = [ctypes.c_int, ctypes.c_int, ctypes.c_int]
    library.cs_tile_store_create.restype = handle
    library.cs_tile_store_destroy.argtypes = [handle]
    library.cs_tile_store_set.argtypes = [handle, ctypes.c_int, ctypes.c_int, byte_ptr,
        ctypes.c_int, ctypes.c_int, ctypes.c_int, ctypes.c_int]
    library.cs_tile_store_set.restype = ctypes.c_int
    class TileWrite(ctypes.Structure):
        _fields_ = [("tile_x", ctypes.c_int), ("tile_y", ctypes.c_int),
                    ("pixels", byte_ptr), ("width", ctypes.c_int),
                    ("height", ctypes.c_int), ("stride", ctypes.c_int),
                    ("image_format", ctypes.c_int)]
    library._cs_tile_write_type = TileWrite
    library.cs_tile_store_set_many.argtypes = [handle, ctypes.POINTER(TileWrite), ctypes.c_int]
    library.cs_tile_store_set_many.restype = ctypes.c_int
    library.cs_tile_store_write_image.argtypes = [handle, byte_ptr, ctypes.c_int,
        ctypes.c_int, ctypes.c_int, ctypes.c_int, ctypes.c_int, ctypes.c_int,
        ctypes.c_int, ctypes.c_int, ctypes.POINTER(ctypes.c_int), ctypes.c_int]
    library.cs_tile_store_write_image.restype = ctypes.c_int
    library.cs_tile_store_copy.argtypes = [handle, ctypes.c_int, ctypes.c_int, byte_ptr,
        ctypes.c_int, ctypes.c_int, ctypes.c_int, ctypes.c_int]
    library.cs_tile_store_copy.restype = ctypes.c_int
    library.cs_tile_store_copy_store.argtypes = [handle, handle]
    library.cs_tile_store_copy_store.restype = ctypes.c_int
    library.cs_tile_store_materialize.argtypes = [handle, byte_ptr, ctypes.c_int,
        ctypes.c_int, ctypes.c_int, ctypes.c_int]
    library.cs_tile_store_materialize.restype = ctypes.c_int
    library.cs_tile_store_info.argtypes = [handle, ctypes.c_int, ctypes.c_int,
        ctypes.POINTER(ctypes.c_int), ctypes.POINTER(ctypes.c_uint64),
        ctypes.POINTER(ctypes.c_uint64)]
    library.cs_tile_store_info.restype = ctypes.c_int
    library.cs_tile_store_copy_keys.argtypes = [handle, ctypes.POINTER(ctypes.c_int), ctypes.c_int]
    library.cs_tile_store_copy_keys.restype = ctypes.c_int
    library.cs_tile_store_remove.argtypes = [handle, ctypes.c_int, ctypes.c_int]
    library.cs_tile_store_remove.restype = ctypes.c_int
    library.cs_tile_store_write_png.argtypes = [handle, ctypes.c_int, ctypes.c_int, ctypes.c_char_p]
    library.cs_tile_store_write_png.restype = ctypes.c_int64
    library.cs_tile_store_load_png.argtypes = [handle, ctypes.c_int, ctypes.c_int,
        ctypes.c_char_p, ctypes.c_uint64]
    library.cs_tile_store_load_png.restype = ctypes.c_int
    library.cs_image_write_png.argtypes = [ctypes.c_char_p, byte_ptr,
        ctypes.c_int, ctypes.c_int, ctypes.c_int, ctypes.c_int]
    library.cs_image_write_png.restype = ctypes.c_int64
    library.cs_image_fill.argtypes = [byte_ptr, *([ctypes.c_int] * 8)]
    library.cs_image_fill.restype = ctypes.c_int
    library.cs_image_fill_rect.argtypes = [byte_ptr, *([ctypes.c_int] * 12)]
    library.cs_image_fill_rect.restype = ctypes.c_int
    library.cs_render_brush_preset_art.argtypes = [
        byte_ptr, *([ctypes.c_int] * 4), byte_ptr, *([ctypes.c_int] * 4),
        ctypes.c_float, ctypes.c_float,
        *([ctypes.c_int] * 4),
    ]
    library.cs_render_brush_preset_art.restype = ctypes.c_int
    library.cs_apply_alpha_mask.argtypes = [
        byte_ptr, *([ctypes.c_int] * 4), byte_ptr, *([ctypes.c_int] * 4),
    ]
    library.cs_apply_alpha_mask.restype = ctypes.c_int
    library.cs_tile_store_clear.argtypes = [handle]
    library.cs_tile_store_resize.argtypes = [handle, ctypes.c_int, ctypes.c_int]
    library.cs_tile_store_allocated_bytes.argtypes = [handle]
    library.cs_tile_store_allocated_bytes.restype = ctypes.c_int64


def _configure_texture_atlas(library) -> bool:
    names = ("cs_texture_atlas_create", "cs_texture_atlas_destroy",
             "cs_texture_atlas_add", "cs_texture_atlas_write",
             "cs_texture_atlas_copy")
    if any(not hasattr(library, name) for name in names):
        return False
    handle = ctypes.c_void_p
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    library.cs_texture_atlas_create.argtypes = [ctypes.c_int, ctypes.c_int]
    library.cs_texture_atlas_create.restype = handle
    library.cs_texture_atlas_destroy.argtypes = [handle]
    library.cs_texture_atlas_destroy.restype = None
    library.cs_texture_atlas_add.argtypes = [handle, ctypes.c_int, ctypes.c_int,
                                             ctypes.POINTER(ctypes.c_int),
                                             ctypes.POINTER(ctypes.c_int)]
    library.cs_texture_atlas_add.restype = ctypes.c_int
    for name in ("cs_texture_atlas_write", "cs_texture_atlas_copy"):
        function = getattr(library, name)
        function.argtypes = [handle, ctypes.c_int, ctypes.c_int, byte_ptr,
                             ctypes.c_int, ctypes.c_int, ctypes.c_int]
        function.restype = ctypes.c_int
    return True


class NativeTextureAtlasHandle:
    """Owns the packed RGBA atlas; Python retains only key-to-rect metadata."""

    def __init__(self, library, size: int, padding: int):
        self._library = library
        self._handle = library.cs_texture_atlas_create(int(size), int(padding))

    def __bool__(self):
        return bool(self._handle)

    def close(self) -> None:
        if self._handle:
            handle, self._handle = self._handle, None
            self._library.cs_texture_atlas_destroy(handle)

    def __del__(self):
        # The atlas is independent of an OpenGL context; release it even when
        # QWidget teardown happens after the context has already disappeared.
        try:
            self.close()
        except Exception:
            pass

    def add(self, width: int, height: int):
        if not self._handle:
            return None
        x, y = ctypes.c_int(), ctypes.c_int()
        if not self._library.cs_texture_atlas_add(self._handle, int(width), int(height),
                                                  ctypes.byref(x), ctypes.byref(y)):
            return None
        return x.value, y.value

    def write(self, x: int, y: int, image) -> bool:
        if not self._handle:
            return False
        return bool(self._library.cs_texture_atlas_write(
            self._handle, int(x), int(y), qimage_pointer(image), image.width(),
            image.height(), image.bytesPerLine()))

    def copy(self, x: int, y: int, width: int, height: int):
        from PySide6.QtGui import QImage
        if not self._handle or width <= 0 or height <= 0:
            return QImage()
        image = QImage(int(width), int(height), QImage.Format.Format_RGBA8888)
        if not self._library.cs_texture_atlas_copy(
                self._handle, int(x), int(y), qimage_pointer(image), image.width(),
                image.height(), image.bytesPerLine()):
            return QImage()
        return image

